# UBIK

./: .gitignore  CLAUDE.md  Claudemdv2.md  ENVIRONMENT.md  HARDENING_PLAN_2026-07-23.md  INSTALL.md  Modelfile  PACKAGES.md  PYTORCH_VERIFICATION.md  README.md  SCRIPTS.md  SESSIONS.md  SOMATIC_NODE_INFO.txt  UBIK_PROJECT_DOCUMENTATION.md  docker-compose.yml  gdrive_rag_deepseek.py  instructions_maestro_v0.11.0.md  launcher.py  requirements-frozen.txt  requirements.txt  venv
.claude/: settings.json
Claude_prompts/: UBIK_Ingestion_Pipeline_Enhancement.md
config/: __init__.py  tailscale_config.json
deepseek/: .gitignore  BENCHMARK_README.md  CLAUDE.md  GDRIVE_RAG_README.md  LICENSE  OPTIMIZATION_NOTES.md  README.md  SETUP_GOOGLE_DRIVE_RAG.md  benchmark_deepseek.py  deepseek_decision_query.py  deepseek_rag_example.py  download_from_drive.py  pyproject.toml  rag_with_docs.py  requirements_google_drive.txt  start_ollama.py  test_gdrive_connection.py
deepseek/config/: .env.example  settings.py
deepseek/scripts/: free_memory.sh
deepseek/tests/: __init__.py  conftest.py
dotfiles/: .bashrc
hippocampal/: .env.example  .gitignore  HIPPOCAMPAL_NODE_CONFIG.md  README.md  exceptions.py  health_check.py  init_neo4j_schema.py  mcp_server.py  quick_test.sh  requirements.txt  resilience.py  restart_all.sh  run_mcp.sh  setup_chromadb.py
ingestion/: .env.example  README.md  cleanup_duplicates.py  enrich.py  fetch_sources.py  interactive_ingest.py  quickstart.sh  requirements.txt  run_phase3.py  spike_enrichment.py
maestro/: .env.example  README.md  __init__.py  __main__.py  (+15 more)
(+170 files in other folders)
