[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deepseek-rag"
version = "1.0.0"
description = "DeepSeek R1 14B RAG system with Google Drive integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.1.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-ollama>=1.0.0",
    "chromadb",
    "sentence-transformers",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "pypdf",
    "python-docx",
    "unstructured",
    "openpyxl",
    "requests>=2.0.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.scripts]
deepseek-launcher = "launcher:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: requires live external services",
    "requires_credentials: requires Google Drive credentials",
]

[tool.setuptools.packages.find]
exclude = ["venv*", "tests*", "chroma_embeddings*", "gdrive_downloads*"]
